add ignores and fix other unused variable issues from byte compile

--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-# -*- no-klobber-test: "I should still be here after it is all over!"; org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-block-checksum: e9991e89b1141692463f2710789c34343ed4084205e19a208f3cd09a29aea3ba; -*-
+# -*- no-klobber-test: "I should still be here after it is all over!"; org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-block-checksum: 595964ff8394ab1ea6282a13e76b3f4d757f358a337b4cb4c52df0b2266c9fd3; -*-
 # [[orgstrap][jump to orgstrap block for this file]]
 #+title: Bootstrap an org-mode file using file local variables
 #+options: num:nil \n:nil
@@ -342,7 +342,7 @@ if you need them. See [[(clrin)]] and [[(oab)]] for examples in this file.
 Here is what the prop line local variables at the start of the file looks like.
 #+name: local-variables-prop-line-example
 #+begin_src org :eval never
-# -*- no-klobber-test: "I should still be here after it is all over!"; org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-block-checksum: e9991e89b1141692463f2710789c34343ed4084205e19a208f3cd09a29aea3ba; -*-
+# -*- no-klobber-test: "I should still be here after it is all over!"; org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-block-checksum: 595964ff8394ab1ea6282a13e76b3f4d757f358a337b4cb4c52df0b2266c9fd3; -*-
 #+end_src
 
 # BE VERY CAREFUL WITH MANUAL EDITS
@@ -463,6 +463,7 @@ The macro provides local bindings for four names:
   "Calculate the `orgstrap-block-checksum' for the current buffer using CYPHER."
   (interactive)
   (orgstrap--with-block orgstrap-orgstrap-block-name
+    (ignore params body-unexpanded)
     (let ((cypher (or cypher (orgstrap--current-buffer-cypher)))
           (body-normalized
            <<orgstrap-code-normalization>>))
@@ -590,7 +591,7 @@ Set `orgstrap--local-variables' to the reversed list of read variables which
 are the first argument in the lambda list ARGS.
 COMMAND is unused since we don't actually want to hack the local variables,
 just get their current values."
-  ;;(message "%s" (reverse (car args)))
+  (ignore command)
   (setq-local orgstrap--local-variables (reverse (car args)))
   nil)
 
@@ -639,6 +640,7 @@ If a block with that name already exists raise an error."
                                            (lexical . yes))
                                          t)
       (orgstrap--with-block orgstrap-orgstrap-block-name
+        (ignore params body-unexpanded body)
         ;;(error "TODO insert some minimal message or something")
         nil))))
 
@@ -690,6 +692,8 @@ a version test and fail if the version is unsupported."
 #+name: orgstrap-install-helper-defuns
 #+begin_src emacs-lisp :results none
 ;; install helpers
+(defvar orgstrap-helper-block-name "orgstrap-helper"
+  "Name for the embedded helper block.")
 (defun orgstrap-install-orgstrap ()
   "Install orgstrap.el directly from this file."
   (error "TODO"))
@@ -708,12 +712,13 @@ the tools they need to make changes without requiring any additional steps."
   (let ((block-name (or block-name orgstrap-helper-block-name)))
 
     (orgstrap--new-heading-elisp-block "orgstrap-helpers"
-                                       orgstrap-helper-block-name
+                                       block-name
                                        '((results . none)
                                          (lexical . yes))
                                        t)
 
-    (orgstrap--with-block orgstrap-helper-block-name
+    (orgstrap--with-block block-name
+      (ignore params body-unexpanded body)
       (error "TODO"))))
 
 ;;(defvar orgstrap--helpers nil)
@@ -750,12 +755,14 @@ XXX NOTE THAT THIS CANNOT BE USED WITH EXAMPLE BLOCKS."
          (body-normalized
           <<orgstrap-code-normalization>>)
          (cypher (or cypher (orgstrap--current-buffer-cypher))))
+    (ignore params body-unexpanded)
     (secure-hash cypher body-normalized)))
 
 (defun orgstrap-get-named-src-block-checksum (name &optional cypher)
   "Calculate the checksum of the first sourc block named NAME using CYPHER."
   (interactive)
   (orgstrap--with-block name
+    (ignore params body-unexpanded)
     (let ((cypher (or cypher (orgstrap--current-buffer-cypher)))
           (body-normalized
            <<orgstrap-code-normalization>>))
@@ -765,6 +772,7 @@ XXX NOTE THAT THIS CANNOT BE USED WITH EXAMPLE BLOCKS."
   "Securely run additional blocks in languages other than elisp.
 Do this by providing the name of the block and the checksum to be embedded
 in the orgstrap block as NAME-CHECKSUM pairs."
+  (ignore name-checksum)
   (error "TODO"))
 #+end_src
 
